Fix Error in Topic Modelling

--- a/markdown/004_topic-modelling.Rmd
+++ b/markdown/004_topic-modelling.Rmd
@@ -3,13 +3,30 @@ title: "Topic Modelling"
 author: "Muhammad Apriandito"
 ---
 
+# Install Packages
+
+```{r}
+# Install Packages
+install.packages(c("tidyverse", 
+                   "tm",
+                   "lubridate",
+                   "lda", 
+                   "LDAvis",
+                   "servr"))
+```
+
+# Load Packages
+
 ```{r}
 # Load Library
 library(tidyverse)
+library(lubridate)
 library(tm)
 library(lda)
 library(LDAvis)
 ```
+
+# Load Data
 
 ```{r}
 # Load Data
@@ -17,41 +34,44 @@ df <- read_rds("data/tweet_dc.rds")
 ```
 
 ```{r}
-# Text Prepocessing
-df_clean <- df %>%
+# Filter Data
+df_filter <- df %>%
   mutate(created_at = as_date(created_at)) %>%
-  filter(created_at > dmy("25-12-2020")) %>%
-  select(text) %>%
-  mutate(text = strip(text)) %>%
-  mutate(text = replace_emoji(text)) %>%
-  mutate(text = replace_html(text)) %>%
-  mutate(text = replace_hash(text, pattern = "#([A-Za-z0-9_]+)", replacement = "")) %>%
-  mutate(text = replace_tag(text, pattern = "@([A-Za-z0-9_]+)", replacement = "")) %>%
-  drop_na()
+  filter(created_at > dmy("25-12-2020"))
 ```
 
 ```{r}
-tweet <- df_clean$text
+# Select Text
+tweets <- df_filter$text
 ```
 
+# Text Preprocessing
+
 ```{r}
+# Read Stopwords
 stop_words <- stopwords("SMART")
-```
 
-```{r}
-# tokenize on space and output as a list:
-doc.list <- strsplit(tweet, "[[:space:]]+")
+# Pre-processing
+tweets <- gsub("'", "", tweets)
+tweets <- gsub("[[:punct:]]", " ", tweets) 
+tweets <- gsub("[[:cntrl:]]", " ", tweets)
+tweets <- gsub("^[[:space:]]+", "", tweets)
+tweets <- gsub("[[:space:]]+$", "", tweets) 
+tweets <- tolower(tweets)  
 
-# compute the table of terms:
+# Tokenize
+doc.list <- strsplit(tweets, "[[:space:]]+")
+
+# Compute the table of terms:
 term.table <- table(unlist(doc.list))
 term.table <- sort(term.table, decreasing = TRUE)
 
-# remove terms that are stop words or occur fewer than 5 times:
+# Remove terms that are stop words or occur fewer than 5 times
 del <- names(term.table) %in% stop_words | term.table < 5
 term.table <- term.table[!del]
 vocab <- names(term.table)
 
-# now put the documents into the format required by the lda package:
+# Now put the documents into the format required by the lda package
 get.terms <- function(x) {
   index <- match(x, vocab)
   index <- index[!is.na(index)]
@@ -61,33 +81,34 @@ documents <- lapply(doc.list, get.terms)
 ```
 
 ```{r}
-# Compute some statistics related to the data set:
-D <- length(documents)  # number of documents (2,000)
-W <- length(vocab)  # number of terms in the vocab (14,568)
-doc.length <- sapply(documents, function(x) sum(x[2, ]))  # number of tokens per document [312, 288, 170, 436, 291, ...]
-N <- sum(doc.length)  # total number of tokens in the data (546,827)
+# Compute statistics
+D <- length(documents) 
+W <- length(vocab) 
+doc.length <- sapply(documents, function(x) sum(x[2, ]))  
+N <- sum(doc.length) 
 term.frequency <- as.integer(term.table)
 ```
 
+# LDA
+
 ```{r}
-# MCMC and model tuning parameters:
-K <- 2
+# Set Parameter
+K <- 3
 G <- 5000
 alpha <- 0.02
 eta <- 0.02
 
+# Fit the model
 fit <- lda.collapsed.gibbs.sampler(documents = documents, K = K, vocab = vocab, 
                                    num.iterations = G, alpha = alpha, 
                                    eta = eta, initial = NULL, burnin = 0,
                                    compute.log.likelihood = TRUE)
-```
-
-```{r}
 theta <- t(apply(fit$document_sums + alpha, 2, function(x) x/sum(x)))
 phi <- t(apply(t(fit$topics) + eta, 2, function(x) x/sum(x)))
 ```
 
 ```{r}
+# Get topic information
 topic <- list(phi = phi,
                      theta = theta,
                      doc.length = doc.length,
@@ -95,13 +116,10 @@ topic <- list(phi = phi,
                      term.frequency = term.frequency)
 ```
 
-```{r}
-topic$term.frequency
-```
-
+# Visualize
 
 ```{r}
-# create the JSON object to feed the visualization:
+# Create the JSON object to feed the visualization
 json <- createJSON(phi = topic$phi, 
                    theta = topic$theta, 
                    doc.length = topic$doc.length, 
@@ -110,6 +128,7 @@ json <- createJSON(phi = topic$phi,
 ```
 
 ```{r}
+# Visualize
 serVis(json, out.dir = 'vis', open.browser = TRUE)
 ```
 
